--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row personal-profile">
         <div class="col-md-4 personal-profile__avatar">
-          <img class="" src="assets/img/me.jpg" alt="avatar">
+          <img class="" src="assets/img/meh.jpg" alt="avatar">
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Shehzad Ahmed_</p>
