--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           current best practices in Web Application Development and Android App Development. Fast learner, hard worker and team player who is proficient in
           an array of scripting languages and multimedia Web tools.
         </p>
-        <a href="#" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
+        <a href="assets/Shehzad Ahmed.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
     </div>
   </section>
@@ -250,6 +250,7 @@
             <li>C#</li>
             <li>MVC</li>
             <li>JavaScript</li>
+            <li>MS SQL Server</li>
             <li>html5</li>
           </ul>
           <a href="javascript:void(0);" class="project-card__link">www.grabthecoupons.com</a>
@@ -301,29 +302,24 @@
         </button>
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
-        <p class="portfolio-modal__title">Mobile and desktop app for London hostel store</p>
+        <p class="portfolio-modal__title">Discount coupons website </p>
         <img class="portfolio-modal__img" src="assets/img/img_project_1_mono.png" alt="modal_img">
         <p class="portfolio-modal__description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt utlabore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex
-          ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-          anim id est laborum. Sed ut perspiciatis undeomnis iste natus error sit voluptatem accusantium doloremque
-          laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-          dicta sunt explicabo.Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-          conse.
+          Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
+          This application is built using entity framework. it have an admin panel to manage all of the data including menus, slider, product coupons, partner websites and so much more.
         </p>
         <div class="portfolio-modal__link">
-          <a href="#">www.superapp.com</a>
+          <a href="https://www.grabthecoupons.com">www.grabthecoupons.com</a>
         </div>
         <div  class="portfolio-modal__stack">
           <p class="portfolio-modal__stack-title">Using stack:</p>
           <ul class="tags">
-            <li>html5</li>
-            <li>css3</li>
+            <li>C#</li>
+            <li>MVC</li>
             <li>JavaScript</li>
-            <li>bower</li>
-            <li>grunt</li>
+            <li>MS SQL Server</li>
+            <li>html5</li>
+            
           </ul>
         </div>
       </div>
