--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <img class="" src="assets/img/gtc.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Discount coupons website </h3>
+          <h3 class="project-card__title">Grab The Coupons - A discount coupons website</h3>
           <p class="project-card__description">
            Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
           </p>
@@ -302,14 +302,14 @@
         </button>
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
-        <p class="portfolio-modal__title">Discount coupons website </p>
-        <img class="portfolio-modal__img" src="assets/img/img_project_1_mono.png" alt="modal_img">
+        <p class="portfolio-modal__title">Grab The Coupons - A discount coupons website </p>
+        <img class="portfolio-modal__img" src="assets/img/gtc.png" alt="modal_img">
         <p class="portfolio-modal__description">
           Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
           This application is built using entity framework. it have an admin panel to manage all of the data including menus, slider, product coupons, partner websites and so much more.
         </p>
         <div class="portfolio-modal__link">
-          <a href="https://www.grabthecoupons.com">www.grabthecoupons.com</a>
+          <a target="_blank" href="https://www.grabthecoupons.com">www.grabthecoupons.com</a>
         </div>
         <div  class="portfolio-modal__stack">
           <p class="portfolio-modal__stack-title">Using stack:</p>
