--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <dt>Age:</dt>
               <dd id="age"></dd>
               <dt>Phone:</dt>
-              <dd><a href="tel:13654008480">+1 (365) 400-8480</a></dd>
+              <dd><a href="tel:923418084619">+92 341-8085-619</a><br><a href="tel:13654008480">+1 (365) 400-8480</a></dd>
               <dt>Email:</dt>
               <dd><a href="mailto:shaxad.here@gmail.com">shaxad.here@gmail.com</a></dd>
               <dt>Address:</dt>
@@ -273,7 +273,7 @@
           <div class="contacts__list">
             <dl class="contact-list">
               <dt>Phone:</dt>
-              <dd><a href="tel:13654008480">+1 (365) 400-8480</a></dd>
+              <dd><a href="tel:923418085619">+92 341-8085-619</a><br><a href="tel:13654008480">+1 (365) 400-8480</a></dd>
               <dt>Whatsapp:</dt>
               <dd><a href="https://wa.me/13654008480" target="_blank">+1 (365) 400-8480</a></dd>
               <dt>Email:</dt>
