--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Shehzad Ahmed - Portfolio</title>
+  <link rel="icon" href="assets/img/favicon.ico"/>
   <link rel="stylesheet" href="assets/css/color.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
 </head>
