--- a/index.html
+++ b/index.html
@@ -258,6 +258,29 @@
         </div>
       </div>
     </div>
+
+    <div class="portfolio-cards">
+      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
+        <div class="col-md-6 col-lg-5 project-card__img">
+          <img class="" src="assets/img/gtc.png" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">Grab The Coupons - A discount coupons website</h3>
+          <p class="project-card__description">
+           Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>C#</li>
+            <li>MVC</li>
+            <li>JavaScript</li>
+            <li>MS SQL Server</li>
+            <li>html5</li>
+          </ul>
+          <a href="javascript:void(0);" class="project-card__link">www.grabthecoupons.com</a>
+        </div>
+      </div>
+    </div>
   </section>
 <!--Portfolio-->
 
