--- a/index.html
+++ b/index.html
@@ -260,24 +260,20 @@
     </div>
 
     <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
+      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal1" data-portfolio-tag="web-sites">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="assets/img/gtc.png" alt="project-img">
+          <img class="" src="assets/img/rapid.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Grab The Coupons - A discount coupons website</h3>
+          <h3 class="project-card__title">PHP Rapid - A php functions library</h3>
           <p class="project-card__description">
-           Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
+            A php functions library that helps you to write code effieciently.
           </p>
           <p class="project-card__stack">Used stack:</p>
           <ul class="tags">
-            <li>C#</li>
-            <li>MVC</li>
-            <li>JavaScript</li>
-            <li>MS SQL Server</li>
-            <li>html5</li>
+            <li>PHP</li>
           </ul>
-          <a href="javascript:void(0);" class="project-card__link">www.grabthecoupons.com</a>
+          <a href="javascript:void(0);" class="project-card__link">github.com/Shaxadhere/phprapid</a>
         </div>
       </div>
     </div>
@@ -328,6 +324,42 @@
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
         <p class="portfolio-modal__title">Grab The Coupons - A discount coupons website </p>
         <img class="portfolio-modal__img" src="assets/img/gtc.png" alt="modal_img">
+        <p class="portfolio-modal__description">
+          Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
+          This application is built using entity framework. it have an admin panel to manage all of the data including menus, slider, product coupons, partner websites and so much more.
+        </p>
+        <div class="portfolio-modal__link">
+          <a target="_blank" href="https://www.grabthecoupons.com">www.grabthecoupons.com</a>
+        </div>
+        <div  class="portfolio-modal__stack">
+          <p class="portfolio-modal__stack-title">Using stack:</p>
+          <ul class="tags">
+            <li>C#</li>
+            <li>MVC</li>
+            <li>JavaScript</li>
+            <li>MS SQL Server</li>
+            <li>html5</li>
+            
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Modal -->
+
+<!-- Portfolio Modal -->
+<div class="modal fade portfolio-modal" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
+        <p class="portfolio-modal__title">Grab The Coupons - A discount coupons website </p>
+        <img class="portfolio-modal__img" src="assets/img/rapid.png" alt="modal_img">
         <p class="portfolio-modal__description">
           Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
           This application is built using entity framework. it have an admin panel to manage all of the data including menus, slider, product coupons, partner websites and so much more.
