--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
-        <div class="col-md-6 col-lg-5 project-card__img">
+        <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
           <img class="" src="assets/img/gtc.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
@@ -261,7 +261,7 @@
 
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal1" data-portfolio-tag="web-sites">
-        <div class="col-md-6 col-lg-5 project-card__img">
+        <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
           <img class="" src="assets/img/rapid.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
@@ -358,23 +358,19 @@
         </button>
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
-        <p class="portfolio-modal__title">Grab The Coupons - A discount coupons website </p>
-        <img class="portfolio-modal__img" src="assets/img/rapid.png" alt="modal_img">
+        <p class="portfolio-modal__title">PHP Rapid - A php functions library </p>
+        <img class="portfolio-modal__img" src="assets/img/rapid_Original.jpg" alt="modal_img">
         <p class="portfolio-modal__description">
-          Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
-          This application is built using entity framework. it have an admin panel to manage all of the data including menus, slider, product coupons, partner websites and so much more.
+          a php functions library that helps you to write code effieciently, it helps you perform database operations, validation,
+           tracking user and some other cool stuff by just calling functions.
         </p>
         <div class="portfolio-modal__link">
-          <a target="_blank" href="https://www.grabthecoupons.com">www.grabthecoupons.com</a>
+          <a target="_blank" href="https://github.com/Shaxadhere/phprapid/">github.com/Shaxadhere/phprapid</a>
         </div>
         <div  class="portfolio-modal__stack">
           <p class="portfolio-modal__stack-title">Using stack:</p>
           <ul class="tags">
-            <li>C#</li>
-            <li>MVC</li>
-            <li>JavaScript</li>
-            <li>MS SQL Server</li>
-            <li>html5</li>
+            <li>PHP</li>
             
           </ul>
         </div>
