--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
         <p class="portfolio-modal__title">PHP Rapid - A php functions library </p>
-        <img class="portfolio-modal__img" src="assets/img/rapid_Original.jpg" alt="modal_img">
+        <center>
+        <img class="portfolio-modal__img" src="assets/img/rapid_Original.jpg" alt="modal_img" width="80%">
+        </center>
         <p class="portfolio-modal__description">
           a php functions library that helps you to write code effieciently, it helps you perform database operations, validation,
            tracking user and some other cool stuff by just calling functions.
