some projects added

--- a/index.html
+++ b/index.html
@@ -137,6 +137,32 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-8 section__resume resume-list">
+        <h3 class="resume-list_title">ACHIEVEMENTS</h3>
+        <div class="resume-list__block">
+
+          <p class="resume-list__block-title">ECompetencia Winner</p>
+          <p>
+            Winner of web application competition ECompetencia held by Iqra University​.
+          </p>
+        </div>
+
+        <div class="resume-list__block">
+          <p class="resume-list__block-title">Techon Winner</p>
+          <p>
+            Winner of web application competition Techon held by Aptech.
+          </p>
+        </div>
+
+        <div class="resume-list__block">
+          <p class="resume-list__block-title">Fazaia Intermediate College</p>
+          <p class="resume-list__block-date">2017</p>
+        </div>
+      </div>
+    </div>
+
     <div class="row section__resume progress-list js-progress-list">
       <div class="col-md-12">
         <h3 class="progress-list__title">general skills</h3>
@@ -174,11 +200,11 @@
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">jquery</span>
-            <span class="progress-list__skill-value">70%</span>
+            <span class="progress-list__skill-title">iOS Apps</span>
+            <span class="progress-list__skill-value">50%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
         </div>
@@ -216,7 +242,7 @@
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">Linux</span>
+            <span class="progress-list__skill-title">Jquery</span>
             <span class="progress-list__skill-value">60%</span>
           </p>
           <div class="progress">
