added some educational details

--- a/index.html
+++ b/index.html
@@ -155,11 +155,20 @@
             Winner of web application competition Techon held by Aptech.
           </p>
         </div>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-8 section__resume resume-list">
+        <h3 class="resume-list_title">Extra Curricular Activities</h3>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">Fazaia Intermediate College</p>
-          <p class="resume-list__block-date">2017</p>
+
+          <p class="resume-list__block-title">a poetry book</p>
+          <p>
+            <a href="https://www.wattpad.com/story/137318661-verses-of-life-and-death">Verses of Life and Death</a>
+          </p>
         </div>
+        
       </div>
     </div>
 
