--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Shehzad Ahmed_</p>
-          <p class="personal-profile__work">Android Developer, Web Application Developer, Entrepreneur.</p>
+          <p class="personal-profile__work">Android Developer, Web Application Developer, iOS Developer, Entrepreneur.</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
@@ -97,7 +97,7 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          I am a developer and i develop php and asp.net mvc web applications and android apps, able to build any of these from the ground up - from concept, navigation,
+          I am a developer and i develop php and asp.net mvc web applications and iOS and android apps, able to build any of these from the ground up - from concept, navigation,
           and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
           current best practices in Web Application Development and Android App Development. Fast learner, hard worker and team player who is proficient in
           an array of scripting languages and multimedia Web tools.
@@ -168,7 +168,7 @@
             <a href="https://www.wattpad.com/story/137318661-verses-of-life-and-death">Verses of Life and Death</a>
           </p>
         </div>
-        
+
       </div>
     </div>
 
