--- a/index.html
+++ b/index.html
@@ -284,6 +284,28 @@
         </nav>
       </div>
     </div>
+
+    <div class="portfolio-cards">
+      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
+        <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+          <img class="" src="assets/img/workfinderapp.png" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">Work Finder - A Job Portal App</h3>
+          <p class="project-card__description">
+            an ios app built with swift, underdevelopment process, a job portal app.
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>Swift</li>
+            <li>XCode</li>
+          </ul>
+          <a href="javascript:void(0);" class="project-card__link">github.com/Shaxadhere/JobPortalApp</a>
+        </div>
+      </div>
+    </div>
+
+
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="websites">
         <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
@@ -652,6 +674,37 @@
         </p>
         <div class="portfolio-modal__link">
           <a target="_blank" href="https://github.com/Shaxadhere/FeeSystemAPI">github.com/Shaxadhere/FeeSystemAPI</a>
+        </div>
+        <div  class="portfolio-modal__stack">
+          <p class="portfolio-modal__stack-title">Using stack:</p>
+          <ul class="tags">
+            <li>PHP</li>
+            
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Modal -->
+
+<!-- Portfolio Modal -->
+<div class="modal fade portfolio-modal" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
+        <p class="portfolio-modal__title"> Work Finder -  A Job Portal iOS APP</p>
+        <img class="portfolio-modal__img" src="assets/img/workfinderapp.png" alt="modal_img" width="80%">
+        <p class="portfolio-modal__description">
+          an ios app built with swift, underdevelopment process, a job portal ios app.
+        </p>
+        <div class="portfolio-modal__link">
+          <a target="_blank" href="https://github.com/Shaxadhere/JobPortalApp">github.com/Shaxadhere/JobPortalApp</a>
         </div>
         <div  class="portfolio-modal__stack">
           <p class="portfolio-modal__stack-title">Using stack:</p>
