--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
         <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
-          <img class="" src="assets/img/workfinderapp.png" alt="project-img">
+          <img class="" src="assets/img/workfinder.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Work Finder - A Job Portal App</h3>
@@ -699,7 +699,7 @@
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
         <p class="portfolio-modal__title"> Work Finder -  A Job Portal iOS APP</p>
-        <img class="portfolio-modal__img" src="assets/img/workfinderapp.png" alt="modal_img" width="80%">
+        <img class="portfolio-modal__img" src="assets/img/workfinder.png" alt="modal_img" width="80%">
         <p class="portfolio-modal__description">
           an ios app built with swift, underdevelopment process, a job portal ios app.
         </p>
