--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Shehzad Ahmed_</p>
-          <p class="personal-profile__work">Android Developer, Web Application Developer, iOS Developer, Entrepreneur.</p>
+          <p class="personal-profile__work">iOS Developer, Android Developer, Web Application Developer.</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
