--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Shehzad Ahmed_</p>
-          <p class="personal-profile__work">iOS Developer, Android Developer, Web Application Developer.</p>
+          <p class="personal-profile__work">I'm a Web Application Developer, MERN Stack Developer and Entrepreneur!</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
@@ -97,9 +97,9 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          I am a developer and i develop php and asp.net mvc web applications and iOS and android apps, able to build any of these from the ground up - from concept, navigation,
+          I am a developer and i develop php and mern stack web applications, able to build any of these from the ground up - from concept, navigation,
           and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
-          current best practices in Web Application Development and Android App Development. Fast learner, hard worker and team player who is proficient in
+          current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
           an array of scripting languages and multimedia Web tools.
         </p>
         <a href="assets/Resume.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
@@ -179,18 +179,18 @@
       <div class="col-md-5 mr-auto">
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">Android Apps (Java)</span>
+            <span class="progress-list__skill-title">PHP</span>
             <span class="progress-list__skill-value">80%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">PHP</span>
-            <span class="progress-list__skill-value">80%</span>
+            <span class="progress-list__skill-title">MERN Stack</span>
+            <span class="progress-list__skill-value">30%</span>
           </p>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
