--- a/index.html
+++ b/index.html
@@ -305,6 +305,26 @@
       </div>
     </div>
 
+    <div class="portfolio-cards">
+      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
+        <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+          <img class="" src="assets/img/workfinder.png" alt="project-img">
+        </div>
+        <div class="col-md-6 col-lg-7 project-card__info">
+          <h3 class="project-card__title">Learning Management System ARTT</h3>
+          <p class="project-card__description">
+           Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS. 
+          </p>
+          <p class="project-card__stack">Used stack:</p>
+          <ul class="tags">
+            <li>PHP</li>
+            <li>Javascript</li>
+          </ul>
+          <a href="javascript:void(0);" class="project-card__link">Private Repository</a>
+        </div>
+      </div>
+    </div>
+
 
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="websites">
@@ -718,6 +738,40 @@
   </div>
 </div>
 <!-- Portfolio Modal -->
+
+<!-- Portfolio Modal -->
+<div class="modal fade portfolio-modal" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
+        <p class="portfolio-modal__title"> Learnign Management System ARTT</p>
+        <img class="portfolio-modal__img" src="assets/img/workfinder.png" alt="modal_img" width="80%">
+        <p class="portfolio-modal__description">
+          Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS. 
+        </p>
+        <div class="portfolio-modal__link">
+          <a target="_blank" href="#">Private Repository</a>
+        </div>
+        <div  class="portfolio-modal__stack">
+          <p class="portfolio-modal__stack-title">Using stack:</p>
+          <ul class="tags">
+            <li>PHP</li>
+            <li>Javascript</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Modal -->
+
+
+
 
   <script src="assets/js/jquery-2.2.4.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
