--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
         <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
-          <img class="" src="assets/img/workfinder.png" alt="project-img">
+          <img class="" src="assets/img/lms.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Learning Management System ARTT</h3>
@@ -320,7 +320,7 @@
             <li>PHP</li>
             <li>Javascript</li>
           </ul>
-          <a href="javascript:void(0);" class="project-card__link">Private Repository</a>
+          <a href="javascript:void(0);" class="project-card__link">artt.edu.pk</a>
         </div>
       </div>
     </div>
@@ -750,12 +750,12 @@
       </div>
       <div class="modal-body col-md-11 col-lg-9 ml-auto mr-auto">
         <p class="portfolio-modal__title"> Learnign Management System ARTT</p>
-        <img class="portfolio-modal__img" src="assets/img/workfinder.png" alt="modal_img" width="80%">
+        <img class="portfolio-modal__img" src="assets/img/lms.png" alt="modal_img" width="80%">
         <p class="portfolio-modal__description">
           Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS. 
         </p>
         <div class="portfolio-modal__link">
-          <a target="_blank" href="#">Private Repository</a>
+          <a target="_blank" href="https://artt.edu.pk">artt.edu.pk</a>
         </div>
         <div  class="portfolio-modal__stack">
           <p class="portfolio-modal__stack-title">Using stack:</p>
