--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </div>
 
     <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
+      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal13" data-portfolio-tag="websites">
         <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
           <img class="" src="assets/img/lms.png" alt="project-img">
         </div>
@@ -740,7 +740,7 @@
 <!-- Portfolio Modal -->
 
 <!-- Portfolio Modal -->
-<div class="modal fade portfolio-modal" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade portfolio-modal" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
