--- a/index.html
+++ b/index.html
@@ -360,6 +360,25 @@
             </div>
 
             <div class="portfolio-cards">
+              <div class="row project-card" data-toggle="modal" data-target="#portfolioModal4" data-portfolio-tag="apis">
+                  <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                      <img class="" src="assets/img/ecommerceapi.png" alt="project-img">
+                  </div>
+                  <div class="col-md-6 col-lg-7 project-card__info">
+                      <h3 class="project-card__title">Ecommerce Web API Node JS</h3>
+                      <p class="project-card__description">
+                          Ecommerce web api based on node js, express js and mongodb.
+                      </p>
+                      <p class="project-card__stack">Used stack:</p>
+                      <ul class="tags">
+                          <li>NodeJS</li>
+                      </ul>
+                      <a href="https://github.com/Shaxadhere/MERNEcommerce" class="project-card__link">github.com/Shaxadhere/MERNEcommerce</a>
+                  </div>
+              </div>
+          </div>
+
+            <div class="portfolio-cards">
                 <div class="row project-card" data-toggle="modal" data-target="#portfolioModal13" data-portfolio-tag="websites">
                     <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
                         <img class="" src="assets/img/lms.png" alt="project-img">
