--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                                                                   current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
                                                                                   an array of scripting languages and multimedia Web tools.
                     </p>
-                    <a href="assets/UpdatedResume.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
+                    <a href="assets/Shehzad Ahmed.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
                 </div>
             </div>
         </section>
