--- a/index2.html
+++ b/index2.html
@@ -122,9 +122,9 @@
                     <h2 id="hello_header" class="section__title">Hi_</h2>
                     <p class="section__description">
                         I am a developer and i develop php and mern stack web applications, able to build any of these from the ground up - from concept, navigation,
-                                                                                                                                                                                                          and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
-                                                                                                                                                                                                          current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
-                                                                                                                                                                                                          an array of scripting languages and multimedia Web tools.
+                                                                                                                                  and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
+                                                                                                                                  current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
+                                                                                                                                  an array of scripting languages and multimedia Web tools.
                     </p>
                     <a href="assets/Shehzad Ahmed.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
                 </div>
@@ -337,7 +337,208 @@
                     </nav>
                 </div>
             </div>
+            <script>
+                const projects = [
+                    {
+                        image: "csslms.png",
+                        title: "Learning Management System ARTT CSS Academy",
+                        description: "Learning Management System Web Application Based on core php, Zoom SDK, DRM-X Integration.",
+                        link: "https://lms.arttcssacademy.com",
+                        stacks: ["PHP", "Javascript"]
+                    }, 
+                    {
+                        image: "ecommerceapi.png",
+                        title: "Ecommerce Web API Node JS",
+                        description: " Ecommerce web api based on node js, express js and mongodb.",
+                        link: "https://github.com/Shaxadhere/MERNEcommerce",
+                        stakcs: ["NodeJS", "ExpressJS", "MongoDB"]
+                    }
+                ]
+            </script>
 
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal13" data-portfolio-tag="websites">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/csslms.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Learning Management System ARTT CSS Academy</h3>
+                        <p class="project-card__description">
+                            Learning Management System Web Application Based on core php, Zoom SDK, DRM-X Integration.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>PHP</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <a href="https://lms.arttcssacademy.com" class="project-card__link">lms.arttcssacademy.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal4" data-portfolio-tag="apis">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/ecommerceapi.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Ecommerce Web API Node JS</h3>
+                        <p class="project-card__description">
+                            Ecommerce web api based on node js, express js and mongodb.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>NodeJS</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/MERNEcommerce" class="project-card__link">github.com/Shaxadhere/MERNEcommerce</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal13" data-portfolio-tag="websites">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/lms.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Learning Management System ARTT</h3>
+                        <p class="project-card__description">
+                            Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>PHP</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <a href="https://lms.artt.edu.pk" class="project-card__link">lms.artt.edu.pk</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="websites">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/gtc.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Grab The Coupons - A discount coupons website</h3>
+                        <p class="project-card__description">
+                            Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>C#</li>
+                            <li>MVC</li>
+                            <li>JavaScript</li>
+                            <li>MS SQL Server</li>
+                            <li>html5</li>
+                        </ul>
+                        <a href="https://www.grabthecoupons.com" class="project-card__link">www.grabthecoupons.com</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal1" data-portfolio-tag="libs">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/rapid.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">PHP Rapid - A php functions library</h3>
+                        <p class="project-card__description">
+                            A php functions library that helps you to write code effieciently.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>PHP</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/phprapid" class="project-card__link">github.com/Shaxadhere/phprapid</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal2" data-portfolio-tag="apps">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/iptracker.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">IP Tracker - A simple iphone app to track ip addresses</h3>
+                        <p class="project-card__description">
+                            an ios app built with swift, tracks down ip addresses with single tap
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>Swift</li>
+                            <li>XCode</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/IPTracker" class="project-card__link">github.com/Shaxadhere/IPTracker</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal3" data-portfolio-tag="apps">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/weatherapp.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Weather App - A simple iphone app to check live weather</h3>
+                        <p class="project-card__description">
+                            an ios app built with swift, to check live weather details
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>Swift</li>
+                            <li>XCode</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/WeatherApp" class="project-card__link">github.com/Shaxadhere/WeatherApp</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal4" data-portfolio-tag="apis">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/lmsapi.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">LMS API - Learning Management System API</h3>
+                        <p class="project-card__description">
+                            an api built with core php with use of
+                            <a href="https://github.com/Shaxadhere/phprapid">phprapid</a>
+                            to perform database operations
+
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>PHP</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/LMSAPI" class="project-card__link">github.com/Shaxadhere/LMSAPI</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-cards">
+                <div class="row project-card" data-toggle="modal" data-target="#portfolioModal12" data-portfolio-tag="apps">
+                    <div class="col-md-6 col-lg-5 project-card__img" style="border-style: double;">
+                        <img class="" src="assets/img/workfinder.png" alt="project-img">
+                    </div>
+                    <div class="col-md-6 col-lg-7 project-card__info">
+                        <h3 class="project-card__title">Work Finder - A Job Portal App</h3>
+                        <p class="project-card__description">
+                            an ios app built with swift, underdevelopment process, a job portal app.
+                        </p>
+                        <p class="project-card__stack">Used stack:</p>
+                        <ul class="tags">
+                            <li>Swift</li>
+                            <li>XCode</li>
+                        </ul>
+                        <a href="https://github.com/Shaxadhere/JobPortalApp" class="project-card__link">github.com/Shaxadhere/JobPortalApp</a>
+                    </div>
+                </div>
+            </div>
 
         </section>
         <!--Portfolio-->
@@ -412,6 +613,7 @@
                         if (dold > dnew) 
                             diff--;
                         
+
                     }
                 }
                 return diff;
@@ -420,103 +622,6 @@
             var bday = new Date("2000-11-01");
             var age = dateDiff(bday, today);
             document.getElementById("age").innerHTML = age;
-
-            const projects = [
-                {
-                    image: "csslms.png",
-                    title: "Learning Management System ARTT CSS Academy",
-                    description: "Learning Management System Web Application Based on core php, Zoom SDK, DRM-X Integration.",
-                    link: "https://lms.arttcssacademy.com",
-                    stacks: [
-                        "PHP", "Javascript"
-                    ],
-                    type: "websites"
-                },
-                {
-                    image: "ecommerceapi.png",
-                    title: "Ecommerce Web API Node JS",
-                    description: " Ecommerce web api based on node js, express js and mongodb.",
-                    link: "https://github.com/Shaxadhere/MERNEcommerce",
-                    stacks: [
-                        "NodeJS", "ExpressJS", "MongoDB"
-                    ],
-                    type: "apis"
-                },
-                {
-                    image: "lms.png",
-                    title: "Learning Management System ARTT",
-                    description: "Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS.",
-                    link: "https://lms.artt.edu.pk",
-                    stacks: [
-                        "PHP", "Javascript", "mysql"
-                    ],
-                    type: "websites"
-                },
-                {
-                    image: "gtc.png",
-                    title: "Grab The Coupons - A discount coupons website",
-                    description: "Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.",
-                    link: "https://www.grabthecoupons.com",
-                    stacks: [
-                        "C#", "MVC", "JavaScript", "MS SQL Server", "ASP.NET"
-                    ],
-                    type: "websites"
-                }, {
-                    image: "rapid.png",
-                    title: "PHP Rapid - A php functions library",
-                    description: "A php functions library that helps you to write code effieciently.",
-                    link: "https://github.com/Shaxadhere/phprapid",
-                    stacks: [
-                        "PHP"
-                    ],
-                    type: "libs"
-                }, {
-                    image: "iptracker.png",
-                    title: "IP Tracker - A simple iphone app to track ip addresses",
-                    description: "an ios app built with swift, tracks down ip addresses with single tap",
-                    link: "https://github.com/Shaxadhere/IPTracker",
-                    stacks: [
-                        "Swift", "XCode"
-                    ],
-                    type: "apps"
-                }, {
-                    image: "weatherapp.png",
-                    title: "Weather App - A simple iphone app to check live weather",
-                    description: "an ios app built with swift, to check live weather details",
-                    link: "https://github.com/Shaxadhere/WeatherApp",
-                    stacks: [
-                        "Swift", "XCode"
-                    ],
-                    type: "apps"
-                }, {
-                    image: "workfinder.png",
-                    title: "Work Finder - A Job Portal App",
-                    description: "an ios app built with swift, underdevelopment process, a job portal app.",
-                    link: "https://github.com/Shaxadhere/JobPortalApp",
-                    stacks: [
-                        "Swift", "XCode"
-                    ],
-                    type: "apps"
-                }, {
-                    image: "Moreo.pk-buy-scrunchies-bandanas-aesthetic-posters-online-in-pakistan.png",
-                    title: "Moreo.pk - an ecommerce website",
-                    description: "an ecommerce website based on core php and Compact UI design for desktop and mobile phones",
-                    link: "https://moreo.pk",
-                    stacks: [
-                        "PHP", "JAVASCRIPT", "mysql", "PHP Rapid"
-                    ],
-                    type: "websites"
-                }
-            ]
-
-            projects.forEach(item => {
-                var stacks = item['stacks']
-                stackHtml = "";
-                stacks.forEach(stack => {
-                    stackHtml += "<li>" + stack + "</li>";
-                });
-                $('#portfolio').append("<div class='portfolio-cards'>" + "<div class='row project-card' data-toggle='modal' data-target='#portfolioModal13' data-portfolio-tag='" + item['type'] + "'>" + "<div class='col-md-6 col-lg-5 project-card__img' style='border-style: double;'>" + "<img class='' src='assets/img/" + item['image'] + "' alt='project-img'>" + "</div>" + "<div class='col-md-6 col-lg-7 project-card__info'>" + "<h3 class='project-card__title'>" + item['title'] + "</h3>" + "<p class='project-card__description'>" + item['description'] + "</p>" + "<p class='project-card__stack'>Used stack:</p>" + "<ul class='tags'>" + stackHtml + "</ul>" + "<a href='" + item['link'] + "' class='project-card__link'>" + item['link'] + "</a>" + "</div>" + "</div>" + "</div>")
-            });
         </script>
     </body>
 </html>
