--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                     <h2 id="hello_header" class="section__title">Hi_</h2>
                     <p class="section__description">
                         I am a developer and i develop php and mern stack web applications, able to build any of these from the ground up - from concept, navigation,
-                                                                                                                                                                                                          and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
-                                                                                                                                                                                                          current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
-                                                                                                                                                                                                          an array of scripting languages and multimedia Web tools.
+                        and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using
+                        current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in
+                        an array of scripting languages and multimedia Web tools.
                     </p>
                     <a href="assets/Shehzad Ahmed.pdf" download="resume" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
                 </div>
@@ -420,7 +420,32 @@
             var bday = new Date("2000-11-01");
             var age = dateDiff(bday, today);
             document.getElementById("age").innerHTML = age;
-
+            const me = {
+                name: "Shehzad Ahmed",
+                bio : "I'm a Web Application Developer, MERN Stack Developer and Entrepreneur!",
+                dob: "2000-11-01",
+                email: "shaxad.here@gmail.com",
+                phone: [
+                    {
+                        number: "+92 (303) 280-4856",
+                        link: "tel:923032804856",
+                    },
+                    {
+                        number: "+1 (365) 400-8480",
+                        link: "tel:13654008480",
+                    },
+                ],
+                address: "Karachi, Pakistan",
+                description: "I am a developer and i develop php and mern stack web applications, able to build any of these from the ground up - from concept, navigation, and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in an array of scripting languages and multimedia Web tools.",
+                resume: "Shehzad Ahmed.pdf",
+                
+                
+            }
+            const links = {
+                twitter: "https://twitter.com/shaxaddd",
+                linkedin: "https://www.linkedin.com/in/shaxadhere/",
+                github: "https://github.com/Shaxadhere"
+            }
             const projects = [
                 {
                     image: "csslms.png",
